# hpgpu

./: .gitignore  CppProperties.json  README.md  initialCommands.sh
src/: CMakeLists.txt  main.cc
src/Aggregator/: Aggregator  Aggregator.cc  Aggregator.h  CMakeLists.txt
src/Cuda-Aggregator/: CudaAggregatorSimple.cu  DataGeneratorWithCuda.cu  DataGeneratorWithCuda.h  cuda_helper.cuh
src/CudaAggregator/: CMakeLists.txt
src/DataGenerator/: CMakeLists.txt  DataGenerator.cc  DataGenerator.h  a.out
src/DataGeneratorWithCuda/: CMakeLists.txt  DataGeneratorWithCuda.cu  DataGeneratorWithCuda.h  cuda_helper.cuh
src/Logger/: CMakeLists.txt  Logger.cc  Logger.h
src/Utilities/: CMakeLists.txt  Utilities.cc  Utilities.h
src/Validator/: CMakeLists.txt  Validator  Validator.cc  Validator.h
test/: Aggregator.unit  Aggregator.unit.cc  DataGenerator.unit.cc  Validator.unit.cc
